# zip-templates

./: README.md  express in markdown table__     Running benches_zi.md
.github/workflows/: publish-rust.yaml
rust/: Cargo.toml
rust/benches/: zip_templates_bench.rs
rust/docs/: index.html
rust/src/: lib.rs
