[package]
name = "zip_templates"
version = "0.1.0"
edition = "2021"


description = "A short description of what your crate does"
license = "MIT OR Apache-2.0"
# or if using a license file instead of SPDX identifier:
# license-file = "LICENSE.txt"

# Optional but recommended fields:
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/rathod-sahaab/zip-templates"
documentation = "https://docs.rs/zip-templates"
readme = "README.md"

[dependencies]
serde_json = "1.0.145"
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tera = "1.20.1"
mystical-runic = "0.5.3"

[[bench]]
name = "zip_templates_bench"
harness = false

[profile.bench]
opt-level = 3     # Already default
debug = true      # Enable debug symbols for profiling
lto = true        # Link-time optimization
codegen-units = 1 # Single codegen unit for max performance
